# zkml

./: .gitignore  Cargo.toml  README.md  analysis.py  aws_script.sh  bench.sh  bench_time.sh  diverse.sh  env.yml  estimate_paper_models.sh  find_optimal.py  find_optimal.sh  find_optimal_gpt.sh  find_optimal_instance.sh  my_test.sh  optimizer_pipeline.sh  public_vals  size_paper_models.sh  time_paper_models_32x.sh  time_paper_models_8x.sh
benches/: benchmark_ipa_add.rs  benchmark_ipa_fft.rs  benchmark_ipa_msm.rs  benchmark_ipa_mul.rs  benchmark_ipa_permute_expression_pair.rs  benchmark_kzg_add.rs  benchmark_kzg_fft.rs  benchmark_kzg_msm.rs  benchmark_kzg_mul.rs  benchmark_kzg_permute_expression_pair.rs
examples/gain/: gain.msgpack  gain_reduced.msgpack  inp.msgpack
examples/mnist/: config.msgpack  model.msgpack
halo2/halo2_gadgets/: Cargo.toml
halo2/halo2_proofs/: Cargo.toml
halo2/halo2_proofs/benches/: fft.rs
halo2/halo2_proofs/src/: arithmetic.rs  fft.rs  lib.rs  plonk.rs
halo2/halo2_proofs/src/fft/: baseline.rs  parallel.rs  recursive.rs
halo2/halo2_proofs/src/plonk/: circuit.rs  evaluation.rs  keygen.rs  permutation.rs  prover.rs
halo2/halo2_proofs/src/plonk/lookup/: prover.rs
halo2/halo2_proofs/src/plonk/permutation/: keygen.rs  prover.rs
halo2/halo2_proofs/src/poly/: domain.rs
halo2/halo2curves/src/: lib.rs
halo2/halo2curves/src/bn256/: assembly.rs  fq.rs  fr.rs
halo2/halo2curves/src/derive/: field.rs
halo2/halo2curves/src/secp256k1/: fp.rs  fq.rs
halo2/halo2curves/src/secp256r1/: fp.rs  fq.rs
python/: converter.py  create_logical.py  fake_input_converter.py  summarize_bench.py  update_msgpack.py
src/: gadgets.rs  layers.rs  model.rs
src/gadgets/: bias_div_floor_relu6.rs  bias_div_round_relu6.rs  dot_prod_bias.rs  gadget.rs  input_lookup.rs  max.rs  mul_div_clamp.rs  nonlinear.rs  var_div_big3.rs
src/gadgets/nonlinear/: cos.rs  relu_decompose.rs  sin.rs
src/layers/: arithmetic.rs  averager.rs  avg_pool_2d.rs  batch_mat_mul.rs  conv2d.rs  cos.rs  dag.rs  div_fixed.rs  fully_connected.rs  gain.rs  layer.rs  logistic.rs  max_pool_2d.rs  mean.rs  noop.rs  pow.rs  rsqrt.rs  sin.rs  softmax.rs  sqrt.rs  square.rs  squared_diff.rs  tanh.rs  update.rs
src/layers/arithmetic/: add.rs  div_var.rs  mul.rs  sub.rs
src/layers/fc/: fc_dp_lookup.rs  fc_dp_vdiv_lookup.rs  fc_dp_vdiv_relud.rs  fc_dpb_vdiv_lookup.rs  fc_dpb_vdiv_relud.rs  fc_rlc_vdiv_lookup.rs  fc_rlc_vdiv_relud.rs  fully_connected.rs  mod.rs
src/layers/shape/: broadcast.rs  concatenation.rs  mask_neg_inf.rs  pack.rs  pad.rs  permute.rs  reshape.rs  resize_nn.rs  rotate.rs  slice.rs  split.rs  transpose.rs
src/utils/: loader.rs  proving_ipa.rs  proving_kzg.rs
