[package]
name = "zkml"
version = "0.0.1"
edition = "2021"
description = "Zero-knowledge machine learning"
license = "LICENSE"
homepage = "https://github.com/ddkang/zkml"
repository = "https://github.com/ddkang/zkml-public.git"
readme = "README.md"
exclude = [
  "params",
  "params_kzg",
  "python",
]

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[dependencies]
bitvec = "1.0.1"
halo2 = { git="https://github.com/privacy-scaling-explorations/halo2", package="halo2", rev="17e9765c199670534c0299c96128d0464a188d0b" }
halo2_gadgets = { git="https://github.com/privacy-scaling-explorations/halo2", package="halo2_gadgets", rev="17e9765c199670534c0299c96128d0464a188d0b", features = ["circuit-params"] }
halo2_proofs = { git="https://github.com/privacy-scaling-explorations/halo2", package="halo2_proofs", rev="17e9765c199670534c0299c96128d0464a188d0b", features = ["circuit-params"] }
lazy_static = "1.4.0"
ndarray = "0.15.6"
num-bigint = "0.4.3"
num-traits = "0.2.15"
once_cell = "1.15.0"
rand = "0.8.5"
rmp-serde = "1.1.1"
rounded-div = "0.1.2"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.85"
wav = "1.0.0"

[dev-dependencies]
rand_core = "0.6.4"
criterion = "0.5.1"
group = "0.13.0"
ff = "0.13.0"
pasta_curves = { git="https://github.com/zcash/pasta_curves/", package="pasta_curves" }

[[bench]]
name = "benchmark_ipa_fft"
harness = false

[[bench]]
name = "benchmark_ipa_msm"
harness = false

[[bench]]
name = "benchmark_kzg_fft"
harness = false

[[bench]]
name = "benchmark_kzg_msm"
harness = false

[[bench]]
name = "benchmark_kzg_mul"
harness = false

[[bench]]
name = "benchmark_ipa_mul"
harness = false

[[bench]]
name = "benchmark_kzg_permute_expression_pair"
harness = false

[[bench]]
name = "benchmark_ipa_permute_expression_pair"
harness = false
